[gd_scene load_steps=5 format=3 uid="uid://cthp21bir2mce"]

[ext_resource type="Script" uid="uid://c4hpq2j640h6c" path="res://scripts/entities/chicken.gd" id="1_f8n6t"]
[ext_resource type="PackedScene" uid="uid://cadsa5eun22r4" path="res://resources/models/ChickenDefault/Chicken.glb" id="2_r5ucq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ocqai"]
height = 2.71779

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_veebi"]
radius = 1.44727
height = 3.08813

[node name="Chicken" type="CharacterBody3D"]
script = ExtResource("1_f8n6t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ocqai")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999841, -0.0178538, 0, 0.0178538, 0.999841, 0, 0.605257, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="head"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
spring_length = 8.0

[node name="Camera3D" type="Camera3D" parent="head/SpringArm3D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ChickenTimer" type="Timer" parent="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="ChickenTimerLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.27451, 0.211765, 0)
theme_override_font_sizes/font_size = 19
horizontal_alignment = 1

[node name="Chicken" parent="." instance=ExtResource("2_r5ucq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.163419, -1.7323, -0.261471)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_veebi")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
